--- a/html/css/contact.css
+++ b/html/css/contact.css
@@ -36,6 +36,7 @@ textarea {
     margin-bottom: 1rem; /* Adds a margin to the bottom of the input/textarea */
     border: 1px solid #ccc;
     border-radius: 4px;
+    font-family: var(--primary-font);
 }
 
 button[type="submit"] {
