--- a/html/css/curiosity.css
+++ b/html/css/curiosity.css
@@ -26,7 +26,11 @@ main {
     padding: 1rem;
     border-radius: 8px;
     transition: transform 0.3s ease-in-out;
-    /* Additional styles, if necessary */
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .interest-area:hover {
